effects/diminactive: Ensure that m_activeWindow is always reset

As the FIXME comment says, a window can be deleted without prior
windowClosed signal.

BUG: 442222